# jack_pedals

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac
layout/: jape_base.css  jape_base.glade  jape_distortion.css  jape_distortion.glade  jape_generator.glade  jape_oscilloscope.css  jape_oscilloscope.glade
resources/: gresource_base.xml  gresource_distortion.xml  gresource_generator.xml  gresource_oscilloscope.xml
src/: .gitignore
src/AudioCon/: JackCon.cpp  JackCon.h
src/GtkGui/: GtkBase.cpp  GtkBase.h  GtkBaseSignals.cpp  GtkDistortion.cpp  GtkDistortion.h  GtkDistortionSignals.cpp  GtkGenerator.cpp  GtkGenerator.h  GtkOscilloscope.cpp  GtkOscilloscope.h
src/Main/: MainDistortion.cpp  MainGenerator.cpp  MainOscilloscope.cpp
src/Pedals/: IPedal.h  PedalDistortion.cpp  PedalDistortion.h  PedalGenerator.cpp  PedalGenerator.h  PedalOscilloscope.cpp  PedalOscilloscope.h
